k8s/petclinic-uat.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic
  namespace: petclinic-uat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-petclinic
  template:
    metadata:
      labels:
        app: spring-petclinic
    spec:
      containers:
      - name: spring-petclinic
        image: springpetclinicacr87345.azurecr.io/spring-petclinic:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
  namespace: petclinic-uat
spec:
  type: LoadBalancer
  selector:
    app: spring-petclinic
  ports:
  - port: 80
    targetPort: 8080
