k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-source-repo-suchita
spec:
  selector:
     run: my-source-repo-suchita
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: LoadBalancer
